--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -7,24 +7,24 @@
 $font-styles: (
 
     heading:(
-    font-size: 6.8vw,
+    font-size: 130px,
     color: #FFFFFF,
     font-family: 'Cormorant SC',
     font-weight: 100
     ),
     h2: (
-    font-size: 3vw,
+    font-size: 50px,
     color: #443A2C,
     font-family: 'Inria Serif'
   ),
   h3: (
-    font-size: 1.8vw,
+    font-size: 27px,
     color: #DCBB65,
     font-weight: 300,
     font-family: 'Inria Serif' 
   ),
   p: (
-    font-size: 1.2vw,
+    font-size: 25px,
     color: #4B4545,
     font-family: 'Gudea', 
     )
