--- a/src/styles/_apartments-page.scss
+++ b/src/styles/_apartments-page.scss
@@ -9,18 +9,20 @@
         }
        
     }
+ 
     .apartments-container{
-        width: 90%;
-        height: 95vh;
-        margin: 1% auto 10% auto;
-        border: 1px solid blue;
+        width: 85%;
+        height: 90vh;
+        margin: 3% auto 2% auto;
         display: flex;
         flex-direction: column;
-       
+       .apartments-content{
+        width: 100%;
+        height: 100%;
+       }
         .apartments-nav{
             width: 100%;
             height: 14%;
-            border-bottom: 1px solid red;
             display: flex;
             justify-content: space-between;
             align-items: center;
@@ -34,8 +36,8 @@
                     width: 100%;
                     display: flex;
                     list-style-type: none;
-                    gap: 5%;
-                    font-size: 1.5vw;
+                    gap: 6%;
+                    font-size: 30px;
                     text-transform: uppercase;
                     font-family: 'Cormorant SC';
                     font-weight: 600;
@@ -43,21 +45,20 @@
                         transition:  0.4s ease-in;
                         cursor: pointer;
                         &:hover{
-                            color: burlywood;
-                            border-bottom: 1px solid rgb(77, 58, 3);
+                            color: burlywood;  
                         }
                     }
                 }
             }
             button{
-                height: 50%;
-                width: 17%;
+                height: 50px;
+                width: 200px;
                 margin: 0 auto;
-                border-radius: 10px;
+                border-radius: 15px;
                 background:#967647;
                 border: none;
                 color: white;
-                font-size: 1.3vw;
+                font-size: 20px;
                 cursor: pointer;
             }
         }
@@ -65,9 +66,8 @@
     }
     .apartments-box{
         width: 100%;
-        height: 80%;
-        border: 1px solid purple;
-        margin: 3% auto;
+        height: 70%;
+        margin: 2% auto;
         display: flex;
         flex-direction: row;
         align-items: center;
@@ -80,42 +80,35 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            border: 1px solid pink;
             .ap-imgs{
                 width: 100%;
                 height: 90%;
-                border: 1px solid olivedrab;
                 .content{
-                    width: 95%;
+                    width: 100%;
                     height: 95%;
-                    border: 1px solid orange;
                     margin: 1% auto;
                     display: flex;
                     align-items: center;
                     justify-content: center;
                     .floorplan{
-                        /* height: 95%; */
-                        /* width: 85%; */
-                        margin: 0 auto;
-                        /* contain: content; */
-                    }
-                    .gallery{
+                        height: 100%;
                         width: 90%;
-                        height: 90%;
-                    } 
+                        margin: 0 auto;
+                       
+                    }
+        
                 }
             }
             .ap-nav{
                 width: 50%;
                 height: 10%;
-                border: 1px solid cornflowerblue;
                 display: flex;
                 justify-content: space-around;
                 button{
                     color: #443A2C;
                     border: none;
                     background-color: transparent;
-                    font-size: 1.2vw;
+                    font-size: 25px;
                     font-weight: 600;
                     cursor: pointer;
                 }
@@ -124,11 +117,10 @@
         .ap-info{
             height: 100%;
             width: 40%;
-            border: 1px solid orange;
             .info-content{
-                height: 90%;
+                height: 100%;
                 width: 90%;
-                border: 1px solid #967647;
+           
                 h3{
                     color: #443A2C;
                 }
@@ -147,7 +139,7 @@
                         font-weight: 500;
                         margin-left: -10%;
                         span{
-                            color: #c5c514;
+                            color: rgb(169, 143, 17);
                             margin-left: 2%;
                         }
                     }
@@ -161,13 +153,15 @@
                     gap: 3%;
                     button{
                         border: none;
-                        background:#837355;
-                        font-size: 1.2vw;
-                        height: 5.1vh;
+                        background:#967647;
+                        font-size: 20px;
+                        height: 50px;
+                        width: 180px;
+                        border-radius: 15px;
                         color: rgb(235, 233, 233);
                         cursor: pointer;
                         font-weight: 100;
-                        box-shadow:  0px 4px 4px 0px rgba(0, 0, 0, 0.42);;
+                        box-shadow:  0px 4px 4px 0px rgba(89, 88, 88, 0.2);;
                     }
                 }
             }
@@ -175,9 +169,9 @@
     }
     .calculator-container{
         width: 70%;
-        height: 70vh;
-        margin: 5% auto;
-        background-color: rgba(68, 58, 44, 0.06);
+        height: 60vh;
+        margin: 0 auto 5% auto;
+        border-top:1px solid #443A2C ;
         padding: 2%;
         .heading{
             height: 30%;
@@ -186,32 +180,19 @@
             h3{
                 margin-top: -0.8%;
                 text-transform: uppercase;
-                font-size: 1.3vw;
+                font-size: 25px;
                 color: #967647;
                 font-family: 'Inter';
                 font-weight: 800;
             }
             h2{
                 margin-top: -2.7%;
+                font-size: 60px;
             }
         }
         .container{
             width: 100%;
             height: 70%;
-            
-           /*  display: flex;
-            flex-direction: row;
-            gap: 2%; */
-            /* .calculator{
-                width: 100%;
-                height: 100%;
-                border: 1px solid  purple;
-            }
-            .bank{
-                width: 100%;
-                height: 100%;
-                background: #E4DED4;
-            } */
         }
     }
 }
