--- a/src/styles/_calculator.scss
+++ b/src/styles/_calculator.scss
@@ -20,11 +20,12 @@
             height: fit-content;
             margin: 1% auto;
             input{
-                height: 6vh;
+                height: 5vh;
                 width: 90%;
                 border: 2px solid rgb(159, 123, 77);
                 border-radius: 10px;
                 margin-bottom: 10px;
+                font-size: 16px;
             }
             label{
                 font-size: 1.2vw;
@@ -35,14 +36,15 @@
             
         }
         button{
-            height: 6vh;
+            bottom: 0%;
+            height: 50px;
             width: 10vw;
-            margin: 2% 5%;
+            margin: 5%  0  0 5%;
             background: #6E6250;
             border: none;
             border-radius: 10px;
             color: #fff;
-            font-size: 1.2vw;
+            font-size: 22px;
             font-weight: 100;
             cursor: pointer;
         }
@@ -95,7 +97,7 @@
                 }
             }
             button{
-                height: 6vh;
+                height: 50px;
                 width: 15vw;
                 margin-top: 3%;
                 cursor: pointer;
@@ -103,7 +105,7 @@
                 border: none;
                 border-radius: 10px;
                 color: #fff;
-                font-size: 1.2vw;
+                font-size: 22px;
                 font-weight: 100;
             }
         }
