--- a/src/styles/_contact.scss
+++ b/src/styles/_contact.scss
@@ -53,18 +53,8 @@
                         form{
                             width: 100%;
                             height: 100%;
-                            .name-inputs{
-                                width: 100%;
-                                display: grid;
-                                grid-template-columns: 45% 45%;
-                                gap: 10%;
-                                margin-bottom: 3vh; 
-                                input[type="text"]{
-                                    height: 4.7vh;
-                                    border: 2px solid #443A2C;
-                                    /* background-color: #EEECE6; */
-                                }
-                            }
+                         
+                            input[type="text"],
                             input[type="tel"],
                             input[type="email"],
                             /* input[type="text"], */
