--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -41,7 +41,7 @@
     .intro-container{
         width: 80vw;
         height: 110vh;
-        margin: -4% auto 2% auto;
+        margin: -2% auto 2% auto;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -57,10 +57,10 @@
             gap: 0;
             position: relative;
             h2{
-                margin-top: -4%;
+                margin-top: -3%;
             }
             p{
-                margin-top: -4%;
+                margin-top: -3%;
                
             }
         }
@@ -192,8 +192,7 @@
 .offer-section{
     width: 80vw;
     height: 80vh;
-    border: 1px solid blue;
-    margin: 0 auto;
+    margin: 10% auto;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -203,7 +202,6 @@
         align-items: center;
         height: 20%;
         width: fit-content;
-        border: 1px solid black;
         margin-top: -2%;
         h2{
             margin-top: -10%;
