--- a/src/styles/_parallax-home.scss
+++ b/src/styles/_parallax-home.scss
@@ -21,7 +21,8 @@
     }
     button{
         width: 20vw;
-        height: 7vh;
+        height: 55px;
+        padding: 1%;
         font-weight: 100;
         border: 1px solid white;
         font-size: 1.8vw;
