--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,6 +14,7 @@
 @import 'building-page';
 @import 'scroll-button';
 @import 'calculator';
+@import 'apartments-slider';
 
 .landing-container{
   @include langing-page-rules;
