--- a/src/styles/_contact.scss
+++ b/src/styles/_contact.scss
@@ -12,7 +12,7 @@
     }
     .contact-info-container{
         width: 100%;
-        height: 82vh;
+        height: 65vh;
         margin: 0 auto ;
         display: flex;
         flex-direction: row;
@@ -20,20 +20,15 @@
         justify-content: center;
         gap: 5%;
         /* background: linear-gradient(to bottom, #EEECE6, #e6e6e6); */
-        padding-top: 5%;
+        padding-top: 3%;
         padding-bottom: 2%;
         .container-item{
             width: 35%;
             height: 100%;
-            .text-block{
-                h3{
-                    color: rgb(189, 189, 189);
-                }
-            }
         }
         #form{
             
-            width: 30%;
+            width: 25%;
             height: 90%;
             .form-container{
                 background-color: transparent;
@@ -61,13 +56,13 @@
                             textarea {
                               height: 4.7vh;
                               width: 96%;
-                              margin-bottom: 3vh; 
-                              padding: 0.6vw;
+                              margin-bottom: 2%; 
+                              padding: 0.4vw;
                               border: 2px solid #443A2C;
                               /* background-color: #EEECE6; */
                             }
                             textarea{
-                                height: 31vh;
+                                height: 30vh;
                             }
                             button[type="submit"]{
                                height: 7.2vh;
@@ -95,33 +90,41 @@
                 h3{
                     margin-top: -0.5%;
                     font-size: 1.4vw;
+                    color: rgb(142, 142, 142);
                 }
                 h2{
                     margin-top: -2.5%;
                 }
                 p{
                     width: 90%;
+                    font-size: 20px;
+                    margin-top: -3%;
                 }
             }
             .socials{
-                
                 display: flex;
                 flex-direction: column;
-                align-items: left;
-                margin-top: 20%;
-                
-               
-                        .icon{
-                            font-size: 1.5vw;
-                            margin-right: 2%;
-                            padding-top: 2%;
-                            
-                        }
-                        p{
-                            font-size: 1.4vw;
-                            margin-top: -4%;
-                        }
+                margin-top: 7%;
+                width: fit-content;
+                .contact-list-item{
+                    display: inline-flex;
+                    vertical-align: middle;
+                    padding-bottom: 3px;
+                   
+                    .icon{
+                        font-size: 21px;
+                        color: #443A2C;
+                       
+                        
                     }
+                    .text{
+                        font-size: 18px;
+                        margin-left: 10px;
+                        color: #4B4545;
+                    }
+                }
+                }
+                      
         }
     }
     .map-container{
@@ -140,10 +143,11 @@
         flex-direction: column;
         align-items: center;
         text-align: center;
+        padding-top: 1%;
         .text-block{
         height: fit-content;
         h2{
-            margin-top: -5%;
+            margin-top: -4%;
         } 
         }
         .links-container{
@@ -154,8 +158,8 @@
             align-items: center;
             justify-content: space-around;
             .item{
-                height: 90%;
-                width: 20vw;
+                height: 80%;
+                width: 20%;
                 border: 1px solid #6c5d43;
                 border-radius: 10px;
                 @include bg-rules;
