--- a/src/styles/_parallax-home.scss
+++ b/src/styles/_parallax-home.scss
@@ -1,13 +1,13 @@
 .parallax-container{
     width: 100%;
-    height: 80vh;
+    height: 100%;
     text-align: center;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     color: white;
-    margin: 3% auto;
+
     h2{
         color: white;
         font-weight: 100;
